--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sukanigadik</title>
 </head>
 <body>
-    <h1>Szia Bálint</h1>
-    <h2>elmentem bubukáli jó8</h2>
+    <h1>Szia Uram</h1>
+    <h2>asd asd</h2>
 </body>
 </html>
