--- a/index.html
+++ b/index.html
@@ -8,6 +8,274 @@
 </head>
 <body>
     <h1>Szia Uram</h1>
-    <h2>asd asd</h2>
+    <h2>Operációs rendszerek
+
+Mi a szoftver?
+ A szoftver alatt a legszűkebb értelemben elektronikus adatfeldolgozó berendezések memóriájában elhelyezkedő, azokat működtető programokat értünk.
+
+A szoftver lehet:
+1.	Indítóprogram vagy alapszoftver – a felhasználó által a legkevésbé manipulálható, a gép üzemszerű működését beállító program(ok), ide tartozik a firmware is;
+
+2.	Rendszerszoftver – a gép és perifériái kommunikációját lebonyolító programok, és amely lehetővé teszi a felhasználó számára más szoftverek elkészítését és üzembe helyezését is;
+
+3.	Alkalmazói szoftver vagy alkalmazások – a felhasználót a számítógép használatán túl mutató céljainak elérésében támogató specifikus programok.
+
+4.	Felhasználó által készített szoftver – valamilyen alkalmazáson belül, annak támogatását kihasználó, programozói ismeretek nélkül elkészíthető programok.
+
+Mi az operációs rendszer?
+Operációs rendszernek nevezzük a számítástechnikában a számítógépeknek azt az alapprogramját, mely közvetlenül kezeli a hardvert, és egy egységes környezetet biztosít a számítógépen futtatandó alkalmazásoknak. 
+Az operációs rendszert egy program halmazként lehet meghatározni.
+
+Az operációs rendszer részei
+1.	Rendszermag - kernel  (mag) –a  program  amely  az  operációs  rendszer  alapvető  funkcióit  hajtsa  végre  és állandóan jelen van a memóriában 
+2.	Alkalmazói interface
+3.	Rendszerhéj - shell (héj) – parancs vagy grafikus felhasználói felület (GUI) az operációs rendszer funkciói felé.
+
+A kernel feladatai:
+•	Ki- és bemeneti eszközök kezelése (billentyűzet, monitor stb.)
+•	Programok, folyamatok futásának kezelése
+•	Indítás, futási feltételek biztosítása, leállítás
+•	Memória-hozzáférés biztosítása
+•	Processzor idejének elosztása
+•	Virtuális gép mutatása a nemkívánt taszkok felé (pontosabban a hardver által biztosított lehetőségek szoftverkiegészítései)
+•	Háttértárolók kezelése
+•	Rendszerhívások kiszolgálása
+•	Fájlrendszer
+•	egyéb
+
+
+A shell feladatai:
+•	Kapcsolattartás a felhasználóval (felhasználói felület)
+•	Alkalmazások futásának kezelése (indítás, futási feltételek biztosítása)
+
+
+A shell nélkül nem lehet programokat indítani. Tágabb értelemben UNIX alatt minden olyan programot shell-nek hívnak, melyek más alkalmazások elindítására képesek (a szöveges parancssor nem feltétel). Egy shell rendelkezhet grafikus, ikonos indító felülettel is, mint például az Ubuntu Unity vagy az Androidos launcher.
+
+Operációs rendszer feladatai:
+Az operációs rendszer feladatai közé tartozik, hogy felkészítse a számítógépet az alkalmazások futtatására. Az indítási folyamat során pontosan ez történik. Miután a számítógép öntesztje lefutott, a BIOS keresni kezdi az operációs rendszert a rendszertöltő szektorokban, és az elsőt, amit megtalál elindítja. Elsőként a kernel töltődik be és indul el. Innentől rendszerfüggő a folytatás, de nagy vonalakban általánosítható.
+
+Operációs rendszer feladatai összefoglalva:
+ 
+•	Hardver kezelés
+•	Programok futtatása
+•	Kapcsolattartás a számítógép és a felhasználó között
+•	Felület biztosítás
+•	Memória kezelés
+•	Folyamatok szervezése
+•	Perifériák kezelése
+•	Állomány kezelés
+•	Hibakezelés
+•	Védelem
+•	Naplózás 
+Operációs rendszerek csoportosítása:
+Felépítése szerint:
+•	monolitikus
+•	réteges szerkezetű
+•	kliens szerver felépítésű
+•	vegyes
+•	virtuális gépek
+
+1.	Hardver típusa szerint/Felhasználási mód szerin
+a.	PC
+b.	szerver
+c.	mobil eszköz
+
+2.	Cél szerint
+a.	általános
+b.	speciális
+
+3.	Felhasználók száma szerint
+a.	egyfelhasználós
+b.	többfelhasználós
+
+4.	Processzor kezelése szerint / Feladatok száma szerinti csoportosítás
+a.	egy feladatos
+b.	több feladatos
+
+5.	Felhasználói felület szerint
+a.	karakteres
+b.	Grafikus
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Operációs rendszerek fejlődése
+
+
+A nulladik generáció a 40-es években:
+Nem volt operációs rendszer. A felhasználóknak kellett programokat írniuk közvetlenül a gépi nyelven, és mindazt amit ma az operációs rendszer hajt végre maguknak a felhasználóknak kellett programozniuk. 
+
+Első generáció az 50-es években:
+Az operációs rendszer célja feladatról feladatra váltásának gyorsítása és egyszerűsítése volt.
+
+Második generáció a 60-es évek kezdetén:
+Ezt    a    generációt    a   multiprogramos    többfelhasználós    rendszerek    jellemzik    valamint    az    első multiprocesszoros rendszerek. A multiprogramos rendszerekben több felhasználói program egyidőben benne van az operatív tárban, a processzor pedig gyorsan tér át az egyik feladatról a másikra.
+
+Harmadik generáció a 60-es évek közepétől a 70-es évek közepéig:
+Az 1964. évben az általános rendeltesésű gépek a rivaldafénybe kerültek.  Azok  voltak  nagy,  és  rendszerint,  hatékonytalan  számítógépes  rendszerek,  de képesek  voltak  széles körű problémák megoldására és hogy működjenek több üzemmódban.
+
+Negyedik generáció a 70-es évek közepétől:
+Ezt  a  generációt  a  számítógépes  hálózatok  és  az  on-line  feldolgozás  jellemzi.  Lehetővé  van  téve hozzáférés  a  távoli  számítógépekhez.  Másfelől,  a  mikroprocesszor  megjelenése  lehetővé  tette  a  személyi számítógépek   megjelenését. Egy   fontos   probléma   amely   a   számítógépes   hálózatokkal   jelent   meg   az információk megvédése volt.  
+
+
+
+
+Operációs rendszerek fajtái
+
+Felhasználói felület szerint:
+a)	Karakteres felületű - az ilyen típusú operációs rendszerek a felhasználótól parancsokat várnak és fogadnak el. 
+
+b)	Grafikus felületű - Az operációs rendszer magját (kernel) egy külső burok (shell) veszi körül, amin keresztül tudja a felhasználó konfigurálni az operációs 
+
+Felhasználók száma szerint:
+
+a)	Egyfelhasználós - A legegyszerűbb fajtát egyfelhasználós (single user) operációs rendszer képezi és ezek az operációs rendszerek csak egy felhasználó számára vannak szánva, azaz ugyanabban az időben csak egy program hajtotódik végre (pl. MS-DOS).
+
+b)	Többfelhasználós - A második csoportot többfelhasználós egyprogramos operációs rendszer képezi. Az olyan operációs rendszerekben több felhasználó ugyannak a programnak a szolgáltatásait használja (pl. bankrendszerek, repülőjegyek rezerváció, stb).
+
+A többfelhasználós szoftver olyan szoftver, amely több felhasználónak ad hozzáférést egy számítógéphez. Az időosztás (time-sharing) rendszerek többfelhasználós rendszerek. A legtöbb nagyszámítógépeken levő batch programozó rendszerek is tekinthetőek "többfelhasználósnak", ezzel elkerülve, hogy a CPU kihasználatlan legyen, míg arra vár, hogy az I/O műveletek befejeződjenek. Bár a "multitasking" elnevezés gyakoribb ebben a kontextusban.
+
+
+Felhasználási mód szerint:
+
+a)	Asztali számítógép 
+b)	Szerver számítógép 
+c)	Mobil eszköz
+
+
+
+
+Forráskód szerint:
+
+a)	Nyílt forráskódú -  Az operációs rendszert alkotó program, amit forráskódnak nevezünk, a felhasználók előtt ismert. Ezért többen is fejleszthetnek hozzá modulokat, amelyek teljesebbé teszik az egész rendszert, illetve a felfedezett hibákat bárki kijavíthatja.
+Például: Debian, RedHat, SuSe,Ubuntu, stb.
+
+b)	Zárt forráskódú - Az operációs rendszert egy cég fejleszti, amely hatalmas apparátust és sok pénzt fordít a fejlesztésre, a tesztelésre, a hibajavításra és a marketingre. Az ilyen programokért fizetni kell. Minden egyes számítógépre, amelyre telepítésre kerül külön meg kell vásárolni. Például: Windows.
+
+
+Feladatok száma szerinti csoportostás:
+
+Azt adja meg, hogy párhuzamosan, egyszerre hány programot tud futtathatni az operációs rendszer.
+
+a)	Egyfeladatos (Single tasking) - Egyszerre csak egy programot képes futtatni. Amíg az nem végzett, addig nem indítható új program. A mai operációs rendszerek között már nincs ilyen. A régebbiek közül a legismertebb egyfeladatos operációs rendszer a DOS volt.
+
+b)	Többfeladatos (Multitask, Multitasking) - Egyszerre több program is futhat egymással párhuzamosan. A mai operációs rendszerek már mind ilyenek. (Windows, Linux, Android, iOS)
+
+
+Cél szerinti felosztás:
+
+a)	Általános célok – Mindennapi használatra.
+b)	Speciális célok – Valamilyen speciális célra kifejlesztett operációs rendszerek, ami csak az adott célra irányul, másra nem használható.
+
+
+
+
+További operációs rendszerek:
+
+a)	Valós idejű operációs rendszerek - A valós idejű rendszerek legfontosabb jellemzője az időkorlát. Minden végrehajtott feladatot egy előre megadott időn belül kell végrehajtaniuk. 
+b)	Beágyazott operációs rendszerek - Általában egy speciális célú, konkrét feladat elvégzésére készült gép operációs rendszere. Egy kis méretű, az adott feladatra jól optimalizálható rendszer. 
+c)	Elosztott idejű rendszerek (time-sharing) - Az elosztott operációs rendszerek több, egymástól független számítógépet irányítanak úgy, mintha azok egy számítógép lennének.
+
+d)	Hálózatos operációs rendszerek -  jellemzik a hálózatba csatlakozott számítógépek. Az operációs rendszerek különbözőek lehetnek, csak közös protokollra van szükség, azaz közös nyelv a kommunikációhoz.
+
+
+A folyamatok
+
+A program valamely programozási nyelven megírt parancsok sorozatából áll, melyek végrehajtásával valamilyen feladat hajtódik végre vagy probléma oldódik meg a számítógépen. 
+A folyamat egy végrehajtási állapotban lévő a végrehajtásához szükséges összes erőforrással együtt (processzor, operatív memória, fájlok,...) applikációs programot jelképezi.
+
+A folyamat állapotai:
+1. A folyamat hajtódik végre(running) – a processzor éppen e folyamat utasításait hajtsa végre; 
+2. A folyamat készen áll a végrehajtáshoz de nem hajtódik végre (ready) – a folyamat megkapta az összes szükséges erőforrást és készen áll a végrehajtáshoz de várja hogy szabaduljon fel a processzor; 
+3. A folyamat blokkolva van (blocked) – vár arra hogy az egyes erőforrás (valamelyik fájl, vagy hogy a nyomtató fejezze be a nyomtatást) szabaduljon fel. A folyamat további működéséhez szükségesek az erőforrások, amelyek pillanatnyilag nem állnak rendelkezésre 
+ 
+1. A folyamatát átmegy a végrehajtási állapotból a blokkolt állapotba, amikor a további végrehajtásához szüksége van más erőforrásokra amelyek pillanatnyilag nem állnak rendelkezésére (várja a képet a szkennerről hogy folytathassa a munkáját) ; 
+2. A folyamat átmegy a végrehajtási állapotból a készen álló állapotba amikor lejár a neki kiosztott processzor ideje. Akkor a folyamatát átkerül a processzorra váró folyamatok listájára. 
+3. A folyamatát átmegy a készenléti állapotból a végrehajtási állapotba, amikor a processzor felszabadul és képes végrehajtani a figyelt folyamat utasításait. 
+4. A folyamatát átmegy a blokkolt állapotból a készenléti állapotba, amikor hozzájut a további munkájához szükséges erőforrásokhoz, de a processzor pillanatnyilag nem szabad és a folyamat a várólistára kerül. 
+
+Process control block(PCB):
+
+Annak érdekében, hogy tudjuk meg hol kell folytatni annak a folyamatnak a végrehajtását amely a készenléti állapotból a végrehajtási állapotba kerül, de előtte már elkezdődött a processzor által a végrehajtása, meg kell jegyezni néhány információt magáról a folyamatról. A PCB  feladata, hogy a folyamat folytatásához szükséges információkat tárolja. 
+Minden folyamat egyedi PCB-vel rendelkezik, amely a következő információkat tárolja: 
+
+1. A folyamat egyedi ID-je; 
+2. A folyamat állapotát; 
+3. A folyamat prioritását (a végrehajtásra váró listából legnagyobb prioritású folyamatok lesznek kiválasztva és azok több processzor időt kapnak) ; 
+4. Az operatív memóriában elhelyezett folyamat memória címe; 
+5. Az elfoglalt erőforrások címei; 
+6. A processzor regisztereinek tartalmát abban a pillanatban, amikor előző alkalommal a végrehajtásban lévő folyamat meg lett szakítva. 
+
+
+Műveletek a folyamatokkal:
+Az operációs rendszer kell, hogy biztosítsa a következő műveleteket a folyamatokkal: 
+
+1. Az új folyamat létrehozása; 
+2. A folyamat megsemmisítése; 
+3. A folyamat állapotának megváltoztatása; 
+4. A folyamat prioritásának megváltoztatása; 
+5. A végrehajtási folyamat kiválasztása; 
+6. A folyamat szinkronizálása - ahhoz, hogy végrehajtódjanak, kettő vagy több folyamat versenyezhet ugyanazokért az erőforrásokért. A félreértések elkerülése végett meg kell határozni az erőforrások használatának sorrendjét; 
+7. A folyamatok közötti kommunikáció - a folyamatok egymásközt cserélhetik az adatokat.
+
+Szálak(Threads):
+Egy folyamat egy vagy több szálból (alfolyamatból) állhat. Ha csak egy szálból áll, akkor a folyamatban lévő parancsok, a pontosan meghatározott sorrendben, egymás után hajtódnak végre. Ha a folyamat több szálból áll, akkor abban a folyamatban lévő parancsok „párhuzamosan“ azaz „versenyképessen“ hajtódnak végre. 
+Példa: Winamp többszálú folyamat. Az egyik szál felelős a zenelejátsásra, a másik szál a felhasználóval való kommunikációra. 
+
+Renszerhivas:
+A rendszerhívás az operációs rendszer és az alkalmazási program kommunikációnak módját jelképezi abban az esetben amikor az alkalmazási program szolgáltatást kér az operációs rendszertől, hogy biztosítson neki valamely hardver erőforrást (képernyő az eredmény kiírására). 
+
+
+Az operációs rendszer strukturája
+
+
+1. Monolitikus (egy részből) – az operációs rendszer egy nagy program, amely több alprogramból áll. Mindegyik alprogram hívhat bármelyik más alprogramot, ha ez szükséges. 
+A felhasználói program kérést küld (rendszerhívást) az operációs rendszer egyes szolgáltatásáért (szüksége van valamely hardver erőforrásra). Alprogramok egymást hívják, hogy dolgozzák fel a kérést, és biztosítsák a szükséges adatokat. A kért feldolgozás eredménye felhasználói programnak lesz elküldve. 
+
+
+2. Hierarchikus (az operációs rendszer réteges struktúrája) – a különbség az operációs rendszer monolitikus és réteges struktúrája között az, hogy a monolitikus strukturánál az operációs rendszer egy halmaz rendezetlen alprogramból áll, míg a réteges megvalósításban az operációs rendszer több rétegre van felosztva, ahol minden rétegnek pontosan meghatározott szerepe van és az irányítja a szigorúan meghatározott erőforrásokat (rendelkezik saját működési területtel). 
+
+Minden egyes réteg támaszkodik az alatta lévő réteg szolgáltatásaira annak érdekében, hogy megkapjuk a kívánt információt, az a szabály van érvényben, hogy minden rétegből csak a hierarchia alacsonyabb rétegeiben bevezetett funkciókat hívhatjuk.
+
+Az operációs rendszer moduljai(rétegei)
+
+Folyamatok irányitasara való modul:
+A modul feladata, hogy lehetővé tegye a folyamatok létrehozását és megsemmisítését. Ez a rész közvetlenül irányítja és kommunikál a folyamatokkal, és nyújt nekik különféle szolgáltatásokat. Például felelős a folyamat létrehozásáért – ily módon szolgáltatást nyújt úgy hogy elfoglalja az operatív memóriát, amely szükséges a folyamatok végrehajtásához és a folyamatok megsemmisítéséhez, ahol szolgáltatást nyújt az operatív memória felszabadításában a folyamat munkájának befejezése után. 
+
+Fájlok irányitasara való modul:
+A fájlok írányítására való modul feladata az, hogy lehetővé tegye fájlok megnyitását és bezárását valamint a tartalmuk olvasását és írást beléjük. Ez a modul gondot vezet a tömeg memória blokkjairól amelyben van a fájl tartalma. Ő, szintén, gondot vezet a fájl tartalmának átviteléről a tömeg memória és az operatív memória között. 
+Az operativ memoria iranyitasara valo modul:
+
+Ennek a modulnak a feladata az, hogy vezessen gondot az operatív memória szabad és elfoglalt részeiről. Ez a réteg gondot vezet arról, hogy miképpen fog a végrehajtási státuszban lévő felhasználói program lefoglalni operatív memóriát, azt is biztosítja, hogy a feldolgozás alatt lévő adatok ( szükségesek a felhasználói program végrehajtásához ) foglalják le az operatív memóriát. Ez a réteg gondoskodik arról is, hogy miképpen fogják a felhasználói program és az általa használt adatok felszabadítani a memóriát amikor a program végrehajtása befejeződik. 
+
+
+
+
+
+
+
+A bemenő-kimenő berendezesek vezerlőjének iranyitasara való modul:
+
+Ennek a modulnak a feladata, hogy irányítsa a bizonyos vezérlőkre, portokra vagy foglalatokra rákapcsolt különféle bemenő-kimenő berendezéseket. Bemenő-kimenő berendezések a következők: billentyűzet, egér, nyomtató, tömeg memória egységek és bővítőkártyák. Minden berendezés vezérlése a megfelelő meghajtó (driver) segítségével történik. 
+Az operációs rendszer minden berendezést a meghajtón keresztül látja. A merevlemez meghajtója mutatja be az operációs rendszernek a merevlemezt egy sor sorszámozott vagy címzett blokkokként (a merevlemez valójában sávokra és szektorokra oszlik). A kommunikációs irányatól függően a meghajtó átmásolja a sávokat és a szektorokat blokkokba vagy fordítva. Ebben a rétegben megvalósított műveletek a bemenő-kimenő berendezések irányítására vonatkoznak valamint az adatok átvitelére a bemenő-kimenő berendezések és az operatív memória között. 
+
+
+A processzor iranyitasara való modul:
+Ez a modul felelős, hogy processzor által biztosítsa a programok, azaz folyamatok versenyképes végrehajtását (a processzor által több folyamat végrehajtása felváltva). Az operációs rendszer a folyamat végrehajtása elsőbbségi fokjának alapján határozza meg, hogy melyik folyamat és milyen hosszú ideig lesz processzor által végrehajtva. Ez a réteg szintén vezet gondot arról, hogyan fog a processzor egy folyamat végrehajtásáról átváltani a másik folyamat végrehajtására és gondot vezet arról miféleképpen fog folytatódni a már elkezdett folyamat végrehajtása. Ez a réteg biztosítsa a processzor által több folyamat egymásutáni végrehajtását. 
+
+A rétegek közti kommunikáció a rendszerhívással valósul meg. Ez egy mechanizmus, amelyen keresztül a felhasználói program szolgáltatást kér az operációs rendszertől, hogy hozzáférése legyen valamely hardver erőforráshoz vagy hogy biztosítsa neki az adatcserét egy másik felhasználói programmal. 
+</h2>
 </body>
 </html>
